# FactorVAE

./: .env  .gitignore  .projectignore  Pipfile  __init__.py  anaconda-project-lock.yml  anaconda-project.yml  dci.py  disentangle.py  generate.py  pyproject.toml  readme.md  test.py  train.py  traverse.py
config/: dci.yaml  disentangle.yaml  train.yaml  traverse.yaml
config/dataset/: dsprites.yaml
config/model/: paper.yaml
dataset/: dsprites.py
disentanglement/: __init__.py  factor_vae.py
factor_vae/: __init__.py  dci.py  generate.py  test.py  train.py  traverse.py  traverse_latent_space.py
factor_vae/callbacks/: beta_warmup.py
factor_vae/config/: dci.yaml  generate.yaml  train.yaml
factor_vae/config/dataset/: dsprites.yaml
factor_vae/config/model/: paper.yaml
factor_vae/dataset/: dsprites.py
factor_vae/model/: discriminator.py  encoder_decoder.py  factor_vae.py
factor_vae/utils/: experiment_tools.py
model/: __init__.py  discriminator.py  factor_vae.py
utils/: experiment_tools.py  paths.py
