[tool.poetry]
name = "factor_vae"
version = "0.1.0"
description = "FactorVAE implementation in PyTorch"
authors = ["mikedev <mik3dev@gmail.com>"]  # Add your "name <email>" here
include = [
    'config/*'
]

[[tool.poetry.source]]
name = "torch-cuda116"
url = "https://download.pytorch.org/whl/cu116"
secondary = true


[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"
pytorch-lightning = "^1.6.5"
seaborn = "^0.11.2"
numpy = "^1.23.1"
path = "^16.4.0"
hydra-core = "^1.2.0"
torchvision = {version="^0.13.0", source="torch-cuda116"}
torch = {version="^1.12.1", source="torch-cuda116"}
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.15.0"
tensorguard = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
download-dsprites = "wget https://github.com/deepmind/dsprites-dataset/raw/master/dsprites_ndarray_co1sh3sc6or40x32y32_64x64.hdf5 -P data"
train-gpu = 'poetry run factor_vae/train.py accelerator=gpu devices=1'

[tool.poe.tasks.clean-empty-runs]
shell = """
from path import Path
saved_models = Path('saved_models')
for run in saved_models.dirs():
    if not run.joinpath('best.ckpt').exists():
        print('removed', run)
        run.rmtree()
"""
interpreter = "python"